# hakari

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml  zapstore.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
cargokit/gradle/: plugin.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/bridge_generated/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/core/config/: health_planet_config.dart
lib/core/di/: providers.dart  switching_signer_service.dart
lib/data/ble/: blue_plus_scale_service.dart  gatt_parser.dart
lib/data/export/: file_export_service.dart
lib/data/health/: health_kit_connect_service.dart
lib/data/healthplanet/: health_planet_codec.dart  http_health_planet_service.dart
lib/data/local/: hive_encryption.dart  hive_settings_repository.dart  hive_weight_repository.dart  (+1 more)
lib/presentation/: app.dart
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: api.rs  frb_generated.rs
scripts/: delete-current-listing.kind5.json  delete-old-listing.kind5.json
test/: widget_test.dart
test/data/: bech32_test.dart  file_export_service_csv_test.dart  gatt_parser_test.dart  health_planet_codec_test.dart  health_service_mapping_test.dart  hive_weight_repository_test.dart  hive_wellness_repository_test.dart  wellness_bucketing_test.dart
test/domain/: workout_readiness_test.dart
(+43 files in other folders)
