[package]
# Note: cargokit's build_tool locates the artifact by *package* name
# (lib<package>.so), so this must stay in sync with the gradle
# cargokit `libname` and the FRB loader stem ("rust").
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Flutter Rust Bridge (must match the Dart-side package version exactly)
flutter_rust_bridge = "=2.12.0"

# Nostr SDK (Tor goes via Orbot SOCKS proxy — no embedded tor/arti)
nostr-sdk = { version = "0.37", features = ["nip44"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Lazy statics
once_cell = "1.20"

# Utils
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
